--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/sp381/Employee-Tracker-Project#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.0",
     "inquirer": "^8.2.2",
     "mysql2": "^2.3.3"
-  },
-  "devDependencies": {}
+  }
 }
